tests/machine/x/php/json_builtin.php
<?php
// m: {string: int}
$m = ["a" => 1, "b" => 2];
echo json_encode($m), PHP_EOL;
